# budi

./: .env  .gitignore  AUDIT_FIXES.md  AUDIT_REPORT.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  start.js  tsconfig.json  turbo.json  vercel.json
.claude/commands/: audit.md  pre-commit-check.md  security-scan.md
.github/workflows/: audit.yml  ci.yml  release.yml
api/: index.ts
apps/mobile-android/: build.gradle.kts  package.json  settings.gradle.kts
apps/mobile-android/app/: build.gradle.kts  proguard-rules.pro
apps/mobile-ios/: package.json
apps/mobile-ios/Budi/: BudiApp.swift  ContentView.swift  Info.plist
apps/mobile-ios/Budi/Models/: Models.swift
apps/mobile-ios/Budi/Services/: APIService.swift
apps/mobile-ios/Budi/Views/: AudioPlayerView.swift  ProcessingView.swift  ProjectDetailView.swift  ProjectsView.swift  SettingsView.swift
apps/web/: .eslintrc.json  .gitignore  next.config.js  package.json  playwright.config.ts  tailwind.config.ts
apps/web/e2e/: audio-processing.spec.ts  auth.spec.ts  billing.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  projects.spec.ts  settings.spec.ts  tracks.spec.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/lib/: api.ts  store.ts  utils.ts
apps/web/src/types/: budi-api.d.ts
infra/: docker-compose.yml
infra/minio/: init-buckets.sh
scripts/: deploy-workers.sh  vercel-install.sh
scripts/audit/: dependency-check.sh  full-audit.sh  security-scan.sh
services/api/: Dockerfile  eslint.config.js  package.json  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
services/api/api/: index.ts
services/api/prisma/: schema.prisma  setup.sql  upgrade-user.sql
services/api/scripts/: prisma-generate.js
services/api/src/: app.ts  index.ts
services/api/src/audio/: ffmpeg.ts  index.ts  measureEbur128.ts  releaseReady.ts  render.ts
services/api/src/lib/: apns.ts  audit.ts  auth.ts  circuitBreaker.ts  db.ts  dlq.ts  errorTracking.ts  gdpr.ts  metrics.ts  s3.ts  (+7 more)
services/worker-codec/: .env.example  Cargo.toml  Dockerfile  railway.toml
services/worker-codec/src/: main.rs
services/worker-dsp/: .env.example  Cargo.toml  Dockerfile  railway.toml
services/worker-dsp/src/: analysis.rs  audio.rs  fix.rs  main.rs  mastering.rs  s3.rs  types.rs  webhook.rs
(+63 files in other folders)
