[package]
name = "worker_dsp"
version = "1.0.0"
edition = "2021"
description = "Budi DSP Worker - Audio analysis, fixing, and mastering"

[dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Redis for job queue
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AWS S3/MinIO
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.54"
aws-credential-types = "1.2"

# Audio processing
symphonia = { version = "0.5", features = ["all"] }
hound = "3.5"
ebur128 = "0.1"
rubato = "0.15"  # Resampling for true peak detection

# DSP
rustfft = "6.2"
realfft = "3.3"

# HTTP client for webhooks
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
bytes = "1.7"
tempfile = "3.13"
uuid = { version = "1.11", features = ["v4"] }

# LAME MP3 encoder bindings
mp3lame-encoder = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
